--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div v-if="action === 'messageIndex'" class="action">
-                    <div class="btn-back text-muted" v-on:click="channelIndex">
+                    <div class="btn-back text-muted" v-on:click="goBack">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                         </svg>
@@ -92,7 +92,7 @@
                 </div>
 
                 <div v-if="action === 'messageView'" class="action">
-                    <div class="btn-back text-muted" v-on:click="messageIndex(data.channel)">
+                    <div class="btn-back text-muted" v-on:click="goBack">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                         </svg>
@@ -130,7 +130,7 @@
                 </div>
 
                 <div v-if="action === 'channelSubscribe'" class="action">
-                    <div class="btn-back text-muted" v-on:click="channelIndex">
+                    <div class="btn-back text-muted" v-on:click="goBack">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                         </svg>
@@ -153,7 +153,7 @@
                 </div>
 
                 <div id="settings" v-if="action === 'settings'" class="action">
-                    <div class="btn-back text-muted" v-on:click="channelIndex">
+                    <div class="btn-back text-muted" v-on:click="goBack">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-left" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
                         </svg>
